discussion/kv_engine/175331/175331_rev17_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-35297: Cancel RangeScans that exist for "too long"

A RangeScan cannot 'exist' indefinitely as disk cannot be released by
compaction. This commit adds a watch-dog task that is responsible
for 'force' cancelling any RangeScan that exists for longer than some
configuration defined duration (180 seconds by default).

The cancellation task is created per vbucket, with that one task
responsible for waking when a scan would violate the max-duration.
Even if that scan has completed, the task will still wake and check,
with part of that check being to update the sleep of the task to
forever or the next expected "violation" of the max-duration.

Change-Id: I409b00ab08772fa36af8f2fad83c0b083fe26165

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-08-11 10:43:34.000000000
Message: 
Uploaded patch set 17.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-08-11 11:15:23.000000000
Message: 
Patch Set 17: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/18597/ : FAILURE

<p>clang-format suggested the following changes:

<pre>
cat <<"EOF" | patch -p1
diff --git a/engines/ep/tests/module_tests/range_scan_test.cc b/engines/ep/tests/module_tests/range_scan_test.cc
index c902b8036..16f77437d 100644
--- a/engines/ep/tests/module_tests/range_scan_test.cc
+++ b/engines/ep/tests/module_tests/range_scan_test.cc
@@ -1636,7 +1636,6 @@ public:
         EXPECT_TRUE(vb);
         return static_cast&lt;EPVBucket&amp;&gt;(*vb);
     }
-
 };
 
 TEST_F(RangeScanOwnerTest, cancelRangeScansExceedingDuration) {

EOF
</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/18597/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19385/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_owner.cc:115:23: error: member access into incomplete type "EPVBucket" [clang-diagnostic-error]
          vbid(vBucket.getId()) {
                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_owner.h:29:7: note: forward declaration of "EPVBucket"
class EPVBucket;
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_owner.cc:131:16: error: member access into incomplete type "EPVBucket" [clang-diagnostic-error]
        vBucket.cancelRangeScansExceedingDuration(std::chrono::seconds(
               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_owner.h:29:7: note: forward declaration of "EPVBucket"
class EPVBucket;
      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19385/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_owner.cc:115:23:
error: member access into incomplete type "EPVBucket" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19385/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48273/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48273/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40552/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/range_scans/range_scan_owner.cc:115:23:
error: member access into incomplete type "EPVBucket"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40552/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21673/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21673/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21321/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21321/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29699/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29699/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20569/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20569/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9172/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9172/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22395/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22395/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9075/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
